--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -9,6 +9,8 @@
     <string name="ep_contacts_sent_requests">contacts/sent</string>
     <string name="ep_contacts_pending_requests">contacts/pending</string>
     <string name="ep_contacts_find_new">contacts/find</string>
-    <string name="ep_contacts_query_ny_memberid">member/all</string>
+    <string name="ep_verified">verified</string>
+    <string name="ep_send_message">sendMessages</string>
+    <string name="ep_get_message">getMessages</string>
 
     </resources>
