--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -3,8 +3,9 @@
     <string name="ep_base_url">rabbitchat-backend.herokuapp.com</string>
     <string name="ep_login">login</string>
     <string name="ep_register">register</string>
+    <string name="ep_register_saveVerificationCode">saveVerificationCode</string>
     <string name="ep_contacts">contacts</string>
-    <string name="ep_chats">chats</string>
+    <string name="ep_chat">chat</string>
     <string name="ep_profile">profile</string>
     <string name="ep_getinfo">getinfo</string>
     <string name="ep_contacts_sent_requests">contacts/sent</string>
