--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -12,6 +12,7 @@
 
     <string name="ep_base_url">rabbitchat-backend.herokuapp.com</string>
     <string name="ep_login">login</string>
+    <string name="ep_verify">verify</string>
     <string name="ep_email">email</string>
     <string name="ep_register">register</string>
     <string name="ep_register_saveVerificationCode">saveVerificationCode</string>
