--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
+
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@mipmap/baseline_home_black_18dp"
+        android:title="Home" />
     <item
         android:id="@+id/nav_chat"
         android:icon="@drawable/ic_menu_chat"
