--- a/app/src/main/res/layout/fragment_create_chat.xml
+++ b/app/src/main/res/layout/fragment_create_chat.xml
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.87" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/createChatUsernamesDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
