--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
@@ -10,8 +11,10 @@
     cardview:cardUseCompatPadding="true">
 
     <RelativeLayout
+        android:id="@+id/listRowRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
         <ImageView
             android:id="@+id/thumbnail"
@@ -19,7 +22,7 @@
             android:layout_height="75dp"
             android:layout_alignParentTop="true"
             android:scaleType="centerCrop" />
-            <!--
+        <!--
             android:src="@drawable/placeholder"/>
             -->
         <TextView
@@ -34,7 +37,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="#444"
             android:textSize="18dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
