--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -19,7 +19,7 @@
     <string name="ep_base_localhost_5000">localhost:5000</string>
     <string name="ep_contacts">contacts</string>
 
-    <string name="ep_update_token">updateToken</string>
+    <string name="ep_update_iidtoken">updateToken</string>
     <string name="ep_profile">profile</string>
     //profile
     <string name="ep_getinfo">getinfo</string>
